# synthetic_data_generator

./: .gitignore  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  pyproject.toml
ecosystem_sim/: __init__.py  main.py
ecosystem_sim/config/: default_config.yaml
ecosystem_sim/core/: __init__.py  causal_engine.py  state_manager.py  time_manager.py  user_agent.py
ecosystem_sim/data/: provenance.yaml  taxonomy.json
ecosystem_sim/intelligence/: __init__.py  graph_stitcher.py  lift_analyzer.py  propensity.py
ecosystem_sim/streams/: __init__.py  base_stream.py  commerce_stream.py  email_stream.py  geo_stream.py  media_stream.py  search_stream.py  social_stream.py
ecosystem_sim/tests/: test_core.py  test_streams_intelligence.py
